scripts/seo/__tests__/fixtures/r-seo-09/negative/01-meta-canonical/base.tsx
import type { MetaFunction } from "@remix-run/node";

export const meta: MetaFunction = () => [
  { title: "Page" },
  { tagName: "link", rel: "canonical", href: "https://example.com/old-path" },
];

export default function Page() {
  return <div />;
}
